# sawa

./: .env.example  .gitignore  .mcp.json  =3.1  AGENTS.md  CAT_150.md  CAT_150_sorted.txt  CLAUDE.md  CODEX_REVIEW.md  CR_GLM.md  CR_KIMI.md  CR_MINIMAX.md  CR_OAI.md  CR_XAI.md  LICENSE  MCP_FIXES.md  OPERATIONS.md  README.md  SCHEMA_AUDIT.md  SPRINT_SUMMARY.md  STATISTICS_PLAN.md  STATISTICS_PLAN_REVIEWED.md  check_trading_days.py  combine_fundamentals.py  data_mappings.json  download_daily_prices.py  download_economy_data.py  download_fundamentals.py  download_overviews.py  download_sp500_symbols.py  gm.html  load_csv_to_postgres.py  nasdaq500.txt  opencode.json  plot_cat_sma.py  populate.sh  pyproject.toml  ratio_downloader.py  rebuild_database.py  requirements.txt  (+5 more)
.opencode/: mcp.json
data/: nasdaq1000_symbols.txt
docs/: CODE_REVIEW.md  DATA_SOURCES.md  IDEA.md  (+12 more)
mcp_server/: __init__.py  database.py  monitoring.py  pyproject.toml  run.sh  server.py  validate_new_tools.py  validation.py
mcp_server/charts/: __init__.py  config.py
mcp_server/charts/core/: __init__.py  colors.py  formatters.py  layout.py  modal.py  sparkline.py
mcp_server/charts/renderers/: __init__.py  economy.py  fundamentals.py  prices.py  ratios.py
mcp_server/charts/themes/: __init__.py  base.py  mono.py  osaka_jade.py
mcp_server/charts/widgets/: __init__.py  box.py  gauge.py  table.py  trend.py
mcp_server/services/: __init__.py  converters.py  economy_service.py  stock_service.py
mcp_server/tools/: __init__.py  _dates.py  _index_filter.py  companies.py  corporate_actions.py  economy.py  fundamentals.py  indices.py  market_data.py  momentum.py  movers.py  multi_timeframe.py  news.py  patterns.py  scanner.py  schema.py  screener.py  sectors.py  support_resistance.py  volume_analysis.py
mcp_server/utils/: sic_mapping.py
tui/: pyproject.toml
tui/sawa_tui/: app.py  components.py  config.py  database.py  help.py  input.py  logo.py  screener.py  state.py  themes.py  views_screener.py
tui/sawa_tui/ai/: __init__.py  client.py  prompts.py
tui/sawa_tui/models/: __init__.py  glossary.py  overview.py  queries.py  queries_service.py  settings.py  users.py  watchlist.py
tui/sawa_tui/rendering/: __init__.py  formatters.py
tui/sawa_tui/services/: __init__.py  converters.py  economy_service.py  stock_service.py
tui/sawa_tui/views/: __init__.py  base.py  economy.py  fundamentals.py  glossary.py  overview.py  settings.py  stocks.py  users.py
tui/sp500_tui/: __init__.py  app.py  config.py  database.py  help.py  input.py  logo.py  screener.py  state.py  themes.py  views.py  views_screener.py
tui/sp500_tui/ai/: __init__.py  client.py  prompts.py
tui/sp500_tui/models/: __init__.py  glossary.py  queries.py  queries_service.py  settings.py  users.py  watchlist.py
tui/sp500_tui/rendering/: __init__.py  formatters.py
tui/sp500_tui/services/: __init__.py  converters.py  economy_service.py  stock_service.py
tui/sp500_tui/views/: __init__.py  base.py  economy.py  fundamentals.py  glossary.py  settings.py  stocks.py  users.py
web/: IMPLEMENTATION_PLAN.md  pyproject.toml
web/sawa_web/: __init__.py  config.py  dependencies.py  main.py
web/sawa_web/auth/: __init__.py  routes.py
web/sawa_web/database/: __init__.py  connection.py
web/sawa_web/models/: __init__.py
web/sawa_web/routes/: __init__.py  admin.py  dashboard.py  economy.py  fundamentals.py  glossary.py  screener.py  settings.py  stocks.py
web/sawa_web/services/: __init__.py  ai_service.py  screener_service.py
web/sawa_web/static/css/: orion.css
web/sawa_web/static/js/: orion.js
web/sawa_web/templates/: base.html  placeholder.html
web/sawa_web/templates/admin/: users.html
web/sawa_web/templates/admin/partials/: user_list.html
web/sawa_web/templates/auth/: login.html
web/sawa_web/templates/components/: card.html  header.html  sidebar.html
web/sawa_web/templates/dashboard/: home.html
web/sawa_web/templates/economy/: index.html
web/sawa_web/templates/economy/partials/: inflation.html  labor.html  yields.html
web/sawa_web/templates/fundamentals/: index.html
web/sawa_web/templates/fundamentals/partials/: balance.html  cashflow.html  income.html  ticker_search.html
web/sawa_web/templates/glossary/: index.html
web/sawa_web/templates/glossary/partials/: definition.html  term_list.html
web/sawa_web/templates/screener/: index.html
web/sawa_web/templates/screener/partials/: help.html  results.html
web/sawa_web/templates/settings/: index.html
web/sawa_web/templates/settings/partials/: account.html  api.html  behavior.html  charts.html  display.html
web/sawa_web/templates/stocks/: detail.html  list.html  not_found.html
web/sawa_web/templates/stocks/partials/: overview_content.html  search_results.html  stocks_table.html  watchlist_button.html  watchlist_preview.html  watchlist_tabs.html
(+210 files in other folders)
