[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sp500-tools"
version = "0.3.0"
description = "S&P 500 data download and processing tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "boto3>=1.28.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
sp500 = "sp500_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sp500_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
