[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sawa"
version = "0.3.0"
description = "S&P 500 data download and processing tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "boto3>=1.28.0",
    "psycopg[binary]>=3.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "numpy>=1.20.0",
    "tqdm>=4.65.0",
    "websockets>=12.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-python-dateutil",
    "types-pytz",
    "types-requests",
    "boto3-stubs[s3]",
]
ta = [
    "TA-Lib>=0.4.0",  # Requires C library: brew install ta-lib (macOS) or apt install libta-lib-dev (Ubuntu)
]

[project.scripts]
sawa = "sawa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sawa"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
