[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-data-mcp-server"
version = "0.1.0"
description = "MCP server for S&P 500 stock data in PostgreSQL"
readme = "../MCP.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "psycopg[binary]>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
